--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">Home</a>
+    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">home</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
@@ -25,7 +25,9 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a class="sidebar-nav-item" href="{{ site.author.github }}">github</a>
+    <a class="sidebar-nav-item" href="{{ site.author.aboutme }}">about.me</a>
+    <a class="sidebar-nav-item" href="{{ site.author.linkedin }}">linkedin</a>
   </nav>
 
   <div class="sidebar-item">
