--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -15,7 +15,7 @@ table {
     > tr {
       > th,
       > td {
-        padding: 12px;
+        /* padding: 12px; */
         line-height: 1.2;
         vertical-align: top;
         border-top: 1px solid #333;
